--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
           <div class="status-bar dashboard-bulk-actions">
             <button class="button" id="openAddRobot" type="button" data-button-intent="create">Add robot</button>
-            <button class="button" id="openBugReport" type="button" data-button-intent="utility">Report bug</button>
           </div>
           <div class="panel fleet-parallelism-control">
             <label class="fleet-parallelism-label" for="fleetParallelism">
@@ -232,6 +231,19 @@
         </div>
       </div>
     </div>
+
+    <button
+      id="openBugReportFloating"
+      class="floating-bug-button"
+      type="button"
+      data-button-intent="utility"
+      aria-label="Report bug"
+      title="Report bug"
+    >
+      <svg class="floating-bug-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2a4 4 0 0 0-4 4v1.2A5.5 5.5 0 0 0 6 11v3.2l-2.1 2.1a1 1 0 1 0 1.4 1.4L6 17v1a6 6 0 0 0 12 0v-1l.7.7a1 1 0 0 0 1.4-1.4L18 14.2V11a5.5 5.5 0 0 0-2-3.8V6a4 4 0 0 0-4-4Zm-2 7h4a3.5 3.5 0 0 1 3.5 3.5V18a3.5 3.5 0 0 1-7 0v-5.5A3.5 3.5 0 0 1 10 9Z"/>
+      </svg>
+    </button>
   </div>
 
   <script type="module" src="assets/js/app.js"></script>
